--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <div id="root" class="overflow-x-hidden font-tiltNeon"></div>
+    <div id="root" class="overflow-x-hidden overflow-y-hidden font-tiltNeon"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
